--- a/index.css
+++ b/index.css
@@ -1,10 +1,59 @@
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
-/*
-Challenge:
-1. Get this layout looking like the 
-   screenshots on the slide.
-*/  
+/* Header */
+
+header {
+  background-color: #282828;
+  color: whitesmoke;
+}
+
+ul {
+  padding: 25px;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin: 0;
+}
+
+li {
+  cursor: pointer;
+}
+
+.logo {
+  font-size: 1.125rem;
+  font-weight: 700;
+}
+
+.icon {
+  width: 25px;
+}
+
+.align-right {
+  margin-left: auto;
+}
+
+/* Main */
+
+section {
+  max-width: 768px;
+  margin: 0 auto;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin: 30px 25px;
+}
+
+img {
+  width: 100%;
+}
+
+.caption {
+  margin: 0 25px;
+}
