--- a/index.css
+++ b/index.css
@@ -5,7 +5,6 @@ body {
 }
 
 /* Header */
-
 header {
   background-color: #282828;
   color: whitesmoke;
@@ -38,7 +37,6 @@ li {
 }
 
 /* Main */
-
 section {
   max-width: 768px;
   margin: 0 auto;
@@ -50,16 +48,19 @@ h1 {
   margin: 30px 25px;
 }
 
-img {
+.item-img {
+  display: block;
   width: 100%;
 }
 
 .caption {
   margin: 0 25px;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
 }
 
 /* Banner */
-
 .item {
   position: relative;
 }
@@ -71,4 +72,15 @@ img {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+/* Buttons */
+button {
+  border: none;
+  background-color: #cd6858;
+  color: whitesmoke;
+  padding: 10px 15px;
+  font-weight: 700;
+  cursor: pointer;
+  align-self: center;
 }
