--- a/index.css
+++ b/index.css
@@ -84,3 +84,22 @@ button {
   cursor: pointer;
   align-self: center;
 }
+
+/* Chatbox */
+.chatbox-bg {
+  position: fixed;
+  right: 6px;
+  bottom: 6px;
+  background-color: #dda15e;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 1px 1px 5px #999;
+  display: flex;
+}
+
+.chatbox-img {
+  width: 50%;
+  margin: auto;
+}
